Get divide by zero right, move junk to public/workshop
"DIV BY 0" was added as a sixth case, which is also chosen when one of
the registers is 'ERROR'.

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
 
         <article>
           <div style="margin:auto">
-            <theCalculator></theCalculator>
-            <!--div ng-view></div-->
+            <!--the-calculator></the-calculator-->
+            <div ng-view></div>
           </div>
         </article>
 
