--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 
     <script src="vendor/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="calculator/calculator.fac.js"></script>
     <script src="calculator/calculator.dir.js"></script>
     
 
