--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     </footer>
     </div>
 
-    <script src="vendor/angular.min.js"></script>
+    <script src="vendor/angular.js"></script>
     <script src="app.js"></script>
     <script src="calculator/calculator.fac.js"></script>
     <script src="calculator/calculator.dir.js"></script>
