--- a/public/calculator/calculator.tpl.html
+++ b/public/calculator/calculator.tpl.html
@@ -8,7 +8,7 @@
         <!--p>Right: {{ vm.inBuffer.right }}</p-->
         <div>
             <button class="calc-button accent" ng-click="vm.inBuffer.updateBuffer('C')">C</button>
-            <button class="calc-button gray-dark" ng-click="vm.inBuffer.updateBuffer('pm')">&plusmn;</button>
+            <button class="calc-button gray-dark" ng-click="vm.inBuffer.updateBuffer('pm')">&#177;</button>
             <button class="calc-button gray-dark" ng-click="vm.inBuffer.updateBuffer('root')">&#8730;</button>
             <button class="calc-button gray-dark" ng-click="vm.inBuffer.updateBuffer('/')">&divide;</button>
         </div>
