Got chatterbox working

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </nav>
         
         <aside>
-            <chatterbox-directive>Chatter goes here...</chatterbox-directive>
+            <chatterbox-directive></chatterbox-directive>
         </aside>
     </div>
 
