--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="app.css" />
     <link rel="stylesheet" type="text/css" href="calculator/calculator.css" />
+    <link rel="stylesheet" type="text/css" href="chatterbox/chatterbox.css" />
 
     <title>Angular Calculator</title>
 </head>
